trybuild_tests/runtime/u0_cannot_call_expose_secret.stderr
error[E0599]: no method named `expose_secret_unchecked` found for struct `RTSecret` in the current scope
  --> trybuild_tests/runtime/u0_cannot_call_expose_secret.rs:18:28
   |
18 |         let _ = secret_two.expose_secret_unchecked(|exposed_secret| {
   |                 -----------^^^^^^^^^^^^^^^^^^^^^^^ method not found in `RTSecret<isize, UInt<UInt<UInt<UInt<UInt<UInt<UInt<UTerm, B1>, B1>, B0>, B0>, B1>, B0>, B0>>`

error[E0599]: the method `expose_secret` exists for struct `RTSecret<isize, UTerm>`, but its trait bounds were not satisfied
  --> trybuild_tests/runtime/u0_cannot_call_expose_secret.rs:36:29
   |
36 |           let _ = secret_four.expose_secret(|exposed_secret| {
   |                   ------------^^^^^^^^^^^^^ method cannot be called on `RTSecret<isize, UTerm>` due to unsatisfied trait bounds
   |
  ::: $CARGO/typenum-1.17.0/src/uint.rs
   |
   |   pub struct UTerm;
   |   ---------------- doesn't satisfy `<UTerm as IsGreater>::Output = B1`
   |
  ::: src/runtime/secret.rs
   |
   | / pub struct RTSecret<
   | |     #[cfg(feature = "zeroize")] T: Zeroize,
   | |     #[cfg(not(feature = "zeroize"))] T,
   | |     MEC: ChooseMinimallyRepresentableUInt + Unsigned,
   | | >(T, Cell<<MEC as ChooseMinimallyRepresentableUInt>::Output>);
   | |_- doesn't satisfy `_: RTExposeSecret<'_, &isize, UTerm>`
   |
   = note: the following trait bounds were not satisfied:
           `<UTerm as IsGreater>::Output = B1`
           which is required by `RTSecret<isize, UTerm>: RTExposeSecret<'_, &isize, UTerm>`
